<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav0"
        android:checkableBehavior="none">
        <item
            android:id="@+id/action_mode_create"
            android:checked="true"
            android:icon="@drawable/ic_gavel_white_48px"
            android:title="@string/main__mode__create" />

        <item
            android:id="@+id/action_mode_favs"
            android:icon="@drawable/ic_star_black_48px"
            android:title="@string/main__mode__favs" />
        <item
            android:id="@+id/action_mode_saved"
            android:icon="@drawable/ic_save_white_48px"
            android:title="@string/main__mode__saved" />
    </group>

    <group
        android:id="@+id/nav1"
        android:checkableBehavior="none">

        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_white_48px"
            android:title="@string/settings__settings" />

        <item
            android:id="@+id/action_exit"
            android:icon="@drawable/ic_cancel_black_48px"
            android:title="@string/main__exit" />
    </group>



</menu>